# hematite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  fly.toml  openapi.yaml
.github/workflows/: rust.yml
.insomnia/ApiSpec/: spc_f3cb91c0010c4b309ebd60b53c392102.yml
.insomnia/Environment/: env_2c8b60a0b627a15cd8296ff999effbb41665ee30.yml
api/: Health check.bru  bruno.json  collection.bru
api/auth/: Authentication Request.bru  JWKS.bru  OpenID Config.bru
api/environments/: dev.bru  local.bru
api/events/: Create event expecting correct revision.bru  Create event expecting revision.bru  Create event.bru  Delete stream.bru  Get event.bru  Get events.bru  Get stream.bru  Get streams.bru
benches/: read_benchmark.rs  write_benchmark.rs
config/: log4rs.yml
load/: post-and-read.js  post-event-multi-stream.js  post-event.js
proto/hematite/: hematite.proto
src/: api.rs  db.rs  lib.rs  main.rs  openid.rs  server.rs
