[package]
name = "hematite"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["http1", "http2", "tokio"] }
axum-macros = "0.4.2"
cloudevents-sdk = "0.7.0"
criterion = { version = "0.5", features = ["async_tokio"] }
dashmap = "6.1.0"
data-encoding = "2.6.0"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
log = "0.4.22"
opentelemetry-otlp = { version = "0.16.0", features = ["logs", "metrics"] }
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
shadow-rs = "0.35.1"
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v7"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.13.0"

[build-dependencies]
shadow-rs = "0.35.1"

[[bench]]
name = "write_benchmark"
harness = false

[[bench]]
name = "read_benchmark"
harness = false
