[package]
name = "hematite"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["http1", "http2", "tokio"] }
axum-macros = "0.5.0"
cloudevents-sdk = "0.8.0"
criterion = { version = "0.5", features = ["async_tokio"] }
dashmap = "6.1.0"
data-encoding = "2.8.0"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
log = "0.4.25"
opentelemetry-otlp = { version = "0.28.0", features = ["logs", "metrics"] }
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.139"
shadow-rs = "1.0.0"
thiserror = "2.0.12"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.15.1", features = ["serde", "v7"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.17.1"

[build-dependencies]
shadow-rs = "1.0.0"

[[bench]]
name = "write_benchmark"
harness = false

[[bench]]
name = "read_benchmark"
harness = false
